--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vt100-ctt"
-version = "0.16.0"
+version = "0.17.0"
 authors = [
     "Chris Titus <contact@christitus.com>",
     "Jesse Luehrs <doy@tozt.net>",
@@ -22,11 +22,12 @@ log = "0.4.22"
 unicode-width = "0.2.0"
 vte = "0.13.0"
 ratatui = { version = "0.29.0", default-features = false, optional = true }
-tui-term = { version = "0.2.0", default-features = false, optional = true }
+ratatui-core = { version = "0.1.0", default-features = false, optional = true }
+tui-term = { version = "0.3.1", default-features = false, optional = true }
 
 [features]
 default = ["tui-term"]
-tui-term = ["dep:tui-term", "dep:ratatui"]
+tui-term = ["dep:tui-term", "dep:ratatui", "dep:ratatui-core"]
 
 [dev-dependencies]
 nix = { version = "0.29.0", features = ["term"] }
